--- a/index.html
+++ b/index.html
@@ -59,9 +59,11 @@
         <div class="score_text"></div>
         <div class="buttons">
             <button class="btn btn-primary btn_replay">Tekrar Başlat</button>
+            <button class="btn btn-primary btn_quit">Teste ara ver</button>
             <button class="btn btn-primary btn_quit">Testi Bitir</button>
         </div>
     </div>
+    
     
 
     <script src="soru.js"></script>
